--- a/Tournament/Tournament/Views/AddPlayers.xaml
+++ b/Tournament/Tournament/Views/AddPlayers.xaml
@@ -45,7 +45,7 @@
                     <DataTemplate>
                         <StackPanel Orientation="Vertical" Margin="10">
                             <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="Naam:" Margin="0,0,10,0" />
+                                <TextBlock Text="Name:" Margin="0,0,10,0" />
                                 <TextBlock Text="{Binding Name}" />
                             </StackPanel>
                         </StackPanel>
